<resources>
    <string name="app_name">Weekly Grocery Planner</string>
    <string name="title_activity_main">Shopping Lists</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Adrian</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="lists">Lists</string>
    <string name="fav">Favrioute Items</string>
    <string name="template">Item Templates</string>
    <string name="login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_currently_selected_list">CurrentlySelectedList</string>
</resources>
